# writey

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Justfile  README.md  docker-compose.yml  setup.sh
migrations/: 20260102000000_create_user_settings.sql
src/: main.rs
src/command/: command.rs  get_transcribe_name.rs  list_voice_users.rs  mod.rs  reconstruct_audio.rs  set_transcribe_name.rs  start_recording.rs  stop_recording.rs  transcribe_session.rs
src/db/: mod.rs
src/transcribe/: mod.rs  prepare.rs  whisper.rs
src/transcription/: mod.rs  transcript.rs  whisper.rs
src/voice/: audio.rs  export.rs  mod.rs  receiver.rs  segment.rs  storage.rs
