[package]
name = "writey"
version = "0.0.1"
edition = "2024"

[dependencies]
tokio = { version = "1.37", features = ["macros", "rt-multi-thread"] }
serenity = { version = "0.12", default-features = false, features = [
  "client",
  "gateway",
  "model",
  "rustls_backend",
  "cache",
]}

songbird = { version = "0.5", features = ["serenity", "gateway", "driver", "receive", "rustls"] }

anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

dashmap = "6"
byteorder = "1.5"
hound = "3.5"
dotenvy = "0.15"
