[package]
name = "writey"
version = "0.0.1"
edition = "2024"

[dependencies]
tokio = { version = "1.37", features = ["macros", "rt-multi-thread"] }
serenity = { version = "0.12", default-features = false, features = [
  "client",
  "gateway",
  "model",
  "rustls_backend",
  "cache",
]}

songbird = { version = "0.5", features = ["serenity", "gateway", "driver", "receive", "rustls"] }

anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
poise = "0.6"

dashmap = "6"
byteorder = "1.5"
hound = "3.5"
dotenvy = "0.15"

sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate"] }

# Time and date handling
chrono = { version = "0.4", features = ["serde"] }

# Async traits
async-trait = "0.1"

# Serialization for transcripts
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Whisper.cpp bindings (uncomment when ready to use)
# whisper-rs = "0.13"

# For tests
[dev-dependencies]
tempfile = "3.10"
